# graph-concept-learner

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
bench/: generate_concept_graph_dataset.py  tsts.py
configs/: config.yml  configuration.yaml
docs/: conf.py  index.md
docs/source/: wealth_dynamics_md.md
gcl_cli/: cli_architecture.txt  main.py
gcl_cli/cmds/data/: raw.py
graph_cl/: __init__.py
graph_cl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
graph_cl/cli/: cli_architecture.txt  main.py
graph_cl/configuration/: __init__.py  configurator.py
graph_cl/data_models/: Concept.py  Data.py  DatasetPathFactory.py  MixIns.py  Model.py  Observation.py  ProjectSettings.py  Sample.py  Train.py
graph_cl/dataloader/: ConceptDataModule.py  ConceptDataModuleBackUp.py  ConceptDataModuleNew.py  ConceptDataset.py  ConceptSetDataModule.py
graph_cl/datasets/: ConceptDataset.py  ConceptDatasetV2.py  ConceptSetDataset.py  Jackson.py  RawDataLoader.py  RawDataLoaderV2.py  RawDataset.py  concept_dataset.py  concept_set_dataset.py  generate_graphs.py
graph_cl/graph_builder/: __init__.py  attribute_graph.py  build_concept_graph.py  contact_graph_builder.py  create_concept_graph.py  graphBuilder.py  knn_graph_builder.py  radius_graph_builder.py
graph_cl/models/: beta_transformer.py  concat_aggregator.py  gnn.py  graph_concept_learner.py  graph_concept_learnerV2.py  mlp.py  space_gm_mlp.py  transformer.py
graph_cl/preprocessing/: attribute.py  filter.py  filterV2.py  graphs.py  harmonize.py  normalize.py  normalizeV2.py  prepare_samples.py  split.py  splitV2.py
graph_cl/train/: gcl.py  lightning.py  pretrain.py  train.py  train_gcl.py
graph_cl/utils/: log.py  mlflow_utils.py  train_utils.py
nextflow/: nextflow.config  workflow.nf
pipeline/: 03_attribute_graph.py  04_pretrain.py  05_train.py  create_concept_graphs.py  create_folds.py  create_graphs.py  filter_samples.py  lit_cli.py  load_raw_data.py  normalize_fold.py  preprocess_jackson.sh  run_pipeline.py
pipeline/V2/: 02_build_graph.py  04_pretrain.py  attribute_graph.py  harmonize_index.py  load_raw_data.py
snakemake/: Snakefile  config.yaml
tests/: main.py  test.py  test_ConceptSetDataset.py  test_attribute_graphs.py  test_batching.py  test_build_concept_graph.py  test_build_graph.py  test_concept_graph_dataset.py  test_configurator.py  test_create_folds.py  test_create_graph.py  test_dataloader.py  test_filter.py  test_in_memory_dataset.py  test_load_raw_data.py  test_load_raw_data_v2.py  test_normalize_fold.py  test_normalize_folds.py  test_pretrain.py  test_split_samples.py  test_train.py
tests/V2/: test_attribute_graph.py  test_build_graph.py  test_concept_dataset.py  test_filter.py
tests/checkpoints/: best_model.ckpt
tests/cli/: model_train.py  test_preprocess.py  test_pretrain.py  test_raw.py
tests/data_models/: test_datamodels.py
tests/dataloader/: test_datamodule.py  test_simple_datamodule.py
tests/datasets/: test_Jackson.py
tests/preprocessing/: test_preprocessing.py
tests/train/: test_lightning.py
tests/utils/: test_log.py
workflows/: Euler.md  README.md  Snakefile
workflows/00_baselines_non_geom/: Snakefile
workflows/0_make_so_jakson/: Snakefile
workflows/1_filter_samples/: Snakefile
workflows/2_split_samples/: Snakefile
workflows/3_normalize/: Snakefile
workflows/4_generate_graph_datasets/: Snakefile
workflows/5_attribute/: Snakefile
workflows/5_pretrain/: Snakefile
workflows/6_pretrain/: Snakefile
workflows/7_model_selection/: Snakefile
workflows/81_train_seeds/: Snakefile
workflows/8_train/: Snakefile
workflows/9_model_selection/: Snakefile
workflows/config/: _main_config_euler.yaml  _main_config_local.yaml  main_config.yaml  main_config.yaml~HEAD
workflows/default_configs/: all_X_cols.yaml  concept_1_radius.yaml  concept_2_knn.yaml  concept_3_contact.yaml  pretrain_model_1.yaml  pretrain_model_2.yaml  pretrain_models_base_config.yaml  santis_main_config.yaml  train_models_base_config.yaml
workflows/notebooks/: GCL_plots_training_mode.ipynb  attention_maps.ipynb  cell_type_check.ipynb  pretrain_model_selection.ipynb  rnd_heatmap.ipynb  select_best_gcls.ipynb  thesis_results.ipynb
workflows/profile/: config.yaml
workflows/rules/: collect_concept_sets.smk  delete_mlflow_runs.smk  gen_all_attributed_graphs.smk  gen_all_datasets.smk  gen_all_graphs.smk  helper_functions.smk  make_folder_structure.smk  normalize_all_folds.smk  parse_pretrain_mlflow_runs.smk  pretrain_all.smk  select_best_pretrain_models.smk  train_all.smk  train_all_space_gm.smk  train_best_concepts.smk  train_best_gcls.smk  train_best_space_gm.smk  train_rnd_concepts.smk
workflows/scripts/: LSF_cluster_job.py  SLURM_cluster_job.py  SLURM_cluster_status.py  cluster_job.py  cluster_status.py  config_to_base_config.sh  delete_mlflow_runs.py  format_to_base_and_generate_configs.sh  format_to_base_coinfig.py  gen_configs.py  make_folder_structure.py  master_job.sh  parse_pretrain_mlflow_runs.py  parse_train_mlflow_runs.py  setup_MLflow.sh
(+194 files in other folders)
