[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_cl"
description = "Learning using concept graphs for general prediction tasks. "
authors = [
    { name = "Santiago Castro Dau", email = "sanntiago5@gmail.com" },
    { name = "Adriano Martinelli", email = "adriano.martinelli@chuv.ch" },
]
readme = "README.md"
# due to how PEP 440 defines version matching, prefer [incl, excl) definitions like below:
requires-python = ">=3.11, <3.12"
dependencies = [
    "click",
    "ai4bmr-core @ git+ssh://git@github.com/AI4SCR/ai4bmr-core.git@main"
]
dynamic = ["version"]

[project.entry-points."console_scripts"]
graph_cl = "graph_cl.cli.main:cli"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pandas"
]
dev = [
    "black",
    "flake8",
    "mypy",
]

[project.urls]
repository = "https://github.com/AI4SCR/graph-concept-learner"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.black]
line-length = 88
skip-string-normalization = false

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_to_top = []

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.setuptools_scm]
version_scheme = "post-release"
write_to = "src/graph_cl/_version.py"  # Example path where version info could be written
